Nieuwe bronnen toegevoegd, RESTful API afgewerkt/aangepast, JSON nog wat extra aangepast

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -9,4 +9,42 @@
   urldate      = {2020-12-16},
 }
 
+@Online{Naeem2021,
+  author       = {Tehreem Naeem},
+  date         = {2021-02-04},
+  title        = {REST API Definition: What is REST API (RESTful API)?},
+  url          = {https://www.astera.com/type/blog/rest-api-definition/},
+  organization = {Astera},
+  urldate      = {2021-03-21},
+}
+
+@Online{W3schools,
+  author  = {W3schools},
+  title   = {HTML Introduction},
+  url     = {https://www.w3schools.com/html/html_intro.asp},
+  urldate = {2021-03-21},
+}
+
+@Reference{Karine2020,
+  date   = {2020-03-29},
+  editor = {Samyn Karine},
+  title  = {REST API},
+  file   = {:C\:/Users/svenp/Downloads/RESTAPI.pdf:PDF},
+}
+
+@Online{Long,
+  author  = {Lauren Long},
+  editor  = {Aditya Mukerjee; Anjana Vakil},
+  title   = {What RESTful actually means},
+  url     = {https://codewords.recurse.com/issues/five/what-restful-actually-means},
+  urldate = {2021-03-21},
+}
+
+@Online{Hubspire,
+  author  = {Hubspire},
+  title   = {Application Programming Interface},
+  url     = {https://www.hubspire.com/resources/general/application-programming-interface/},
+  urldate = {2021-03-21},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
