kleine changes in bron en reference

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -25,9 +25,9 @@
   urldate = {2021-03-21},
 }
 
-@Reference{Karine2020,
+@Online{Karine2020,
+  author = {Samyn Karine},
   date   = {2020-03-29},
-  editor = {Samyn Karine},
   title  = {REST API},
   file   = {:C\:/Users/svenp/Downloads/RESTAPI.pdf:PDF},
 }
