--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -199,10 +199,10 @@ Naast statische resources zoals XML en JSON kan dus ook uitvoerbare code aangele
 
 Bij REST kan elk stuk informatie een resource zijn, dit kan van alles zijn zoals documenten, services, collecties van andere resources, afbeeldingen, en dergelijke. In sommige gevallen wordt “Everything as a resource”  een zevende principe van REST genoemd. 
 
-\subsection{Hoe werkt een REST API?}
+\subsection{Hoe werkt een RESTful API?}
 \label{subsec:Hoe werkt een RESTful API?}
 
-Zoals eerder vermeld in \ref{subsec:Design principes} heeft elke resource een unieke URL, zo een URL wordt een request genoemd waarbij de gereturnde data gekend staat als een response. In een RESTful API worden deze requests of transacties in vier componenten verdeeld:
+Zoals eerder vermeld in subsectie \ref{subsec:Design principes} heeft elke resource een unieke URL, zo een URL wordt een request genoemd waarbij de gereturnde data gekend staat als een response. In een RESTful API worden deze requests of transacties in vier componenten verdeeld zoals uitgelegd in \autocite{Karine2020}.
 
 \begin{itemize}
     \item \textbf{GET}: Deze request haalt een representatie van een resource op.
