Protocol buffers toegevoegd

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -47,4 +47,25 @@
   urldate = {2021-03-21},
 }
 
+@Online{Fowler2014,
+  author = {Martin Fowler; James Lewis},
+  date   = {2014-03-25},
+  title  = {Microservices},
+  url    = {https://martinfowler.com/articles/microservices.html},
+}
+
+@Online{Google2020,
+  author = {Google},
+  date   = {2020-12-17},
+  title  = {Protocol Buffers Language guide},
+  url    = {https://developers.google.com/protocol-buffers/docs/overview},
+}
+
+@Online{Kurion2020,
+  author = {Arun Mathew Kurion},
+  date   = {2020-04-22},
+  title  = {Understanding Protocol Buffers},
+  url    = {https://betterprogramming.pub/understanding-protocol-buffers-43c5bced0d47},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
